--- a/mimesWeep/src/style/mimesWeep.css
+++ b/mimesWeep/src/style/mimesWeep.css
@@ -3,14 +3,14 @@
 }
 
 .mimesWeep-header {
-  background-color: #282c34;
+  background-color: #3b517d;
   max-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: 6vmin;
-  color: #61dafb;
+  color: #dbdde0;
   letter-spacing: 12px;
   padding-left: 12px;
 }
