--- a/mimesWeep/src/style/mimesWeep.css
+++ b/mimesWeep/src/style/mimesWeep.css
@@ -3,14 +3,14 @@
 }
 
 .mimesWeep-header {
-  background-color: #282c34;
-  max-height: 10vh;
+  background-color: #4fa3f3;
+  min-height: 80px;
+  max-height: 80px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: 6vmin;
-  color: #61dafb;
-  letter-spacing: 12px;
-  padding-left: 12px;
+  padding-left: 2px;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
